logout on mobile

--- a/stylesheets/_statics.scss
+++ b/stylesheets/_statics.scss
@@ -10,6 +10,7 @@ $background-clr	: #fafafa;
 $loadingcolor	: #79afb1;
 
 $sidebar-width	: 70px;
+$sidebar-mob	: 50px;
 $sidebar-clr	: #21252d;
 $sidebar-clr2	: #2b303b;
 $sidebar-shadow	: rgba(48,48,48,0.2);
