--- a/views/auth/auth.html
+++ b/views/auth/auth.html
@@ -7,7 +7,7 @@
 			<form id="auth-login" ng-submit="signin()">
 				<md-input-container>
 					<label>username</label>
-					<input type="text" ng-model="username" spellcheck="false" autofocus required/>
+					<input type="text" ng-model="username" spellcheck="false" autocorrect="off" autocapitalize="none" autofocus required/>
 				</md-input-container>
 				<md-input-container>
 					<label>password</label>
